updating the readme

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,13 @@
 <h2>Home Page</h2>
 
 <% if (!user) { %>
-	<p>please login to continue</p>
+<p>please login to continue</p>
 <% } else { %>
-	<p>Welcome, <%= user.name %> <%= user.email %></p>
-	<% if (user.avatar) { %>
-		<img src="<%= user.avatar %>" alt="<%= user.name %>'s avatar" />
-	<% } %>
-<% } %>
-
-<%- include('./partials/footer') %>
+<p>Welcome, <%= user.name %> <%= user.email %></p>
+<% if (user.avatar) { %>
+<img
+  src="<%= user.avatar %>"
+  referrerpolicy="no-referrer"
+  alt="<%= user.name %>'s avatar"
+/>
+<% } %> <% } %> <%- include('./partials/footer') %>
