--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/"><h2 class="nav-brand">Show Buddies</h2></a>
+      <a href="/"><h2 class="nav-brand">Show Buddy</h2></a>
       <ul class="nav-links">
         <% if (user) { %>
         <li class="nav-item">
