--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,6 +60,7 @@ nav a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 100px;
 }
 
 
@@ -77,6 +78,7 @@ form {
   display: grid;
   grid-template-columns: auto 150px;
   margin-bottom: 100px;
+  margin-top: 40px;
 }
 /* 
 input:focus, textarea:focus, select:focus{
@@ -98,18 +100,45 @@ input:focus, textarea:focus, select:focus{
 }
 
 
-/* .results {
-  width: 800px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-} */
 
 .result-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  width: 1000px;
 }
+
+.show{
+  display: flex;
+  flex-direction: row;
+  /* align-items: flex-start; */
+  justify-content: space-between;
+  background-color: #fff;
+  color: #000;
+  margin-bottom: 20px;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.image-container {
+  width: 70px;
+  height: 70px;
+  overflow: hidden;
+  background-color: blue;
+  border-radius: 50%;
+}
+
+.show img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.show button {
+  background-color: #156FD8;
+  border: none;
+  color: #fff;
+  padding: 10px 30px;
+}
+
+
 
 
 
