--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
           <a href="/profile" class="nav-link">PROFILE</a>
         </li>
         <li class="nav-item">
-          <a href="/buddies" class="nav-link">BUDDIES</a>
+          <a href="/locations" class="nav-link">LOCATIONS</a>
         </li>
         <li class="nav-item">
           <a href="/logout">
