--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,12 @@
 <div class="container">
   <h2>Find a Show</h2>
   <form action="/shows" method="GET" class="search">
-    <input type="text" class="artist" name="showSearch" />
+    <input
+      type="text"
+      class="artist"
+      name="showSearch"
+      placeholder="Choose a city..."
+    />
     <button type="submit">Search</button>
   </form>
 
@@ -17,7 +22,9 @@
       <div name="showName"><%= e.name %></div>
       <div name="showDate"><%= e.dates.start.localDate %></div>
       <div name="showVenue"><%= e._embedded.venues[0].name %></div>
+      <div name="showLocale"><%= e._embedded.venues[0].city.name %></div>
       <form action="/profile/shows" method="POST">
+        <input name="creatorId" type="hidden" value="<%= user._id %>" />
         <input type="hidden" name="showImage" value="<%= e.images[0].url %>" />
         <input type="hidden" name="showName" value="<%= e.name %>" />
         <input
@@ -29,6 +36,11 @@
           type="hidden"
           name="showVenue"
           value="<%= e._embedded.venues[0].name %>"
+        />
+        <input
+          type="hidden"
+          name="showLocale"
+          value="<%= e._embedded.venues[0].city.name %>"
         />
         <button type="submit">Save</button>
       </form>
