--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
 <div class="container">
-  <h2>Buddies</h2>
+  <h2>Locations</h2>
 </div>
 <%- include('../partials/footer') %>
