--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -13,6 +15,11 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #181818;
   color: #fff;
+  background-color: #181818;
+  opacity: 1;
+  background-image:  radial-gradient(#525252 0.65px, transparent 0.65px), radial-gradient(#525252 0.65px, #181818 0.65px);
+  background-size: 26px 26px;
+  background-position: 0 0,13px 13px;
 }
 
 
@@ -49,17 +56,39 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6); 
+	-webkit-box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6); 
+	-moz-box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6); 
 }
+
+.navbar h2 {
+  font-family:'Agbalumo', sans-serif;
+}
+
 
 /* Body */
 
 
-.container {
+.container-one {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 90px;
+}
+
+.container-one h2 {
+  font-family:'Agbalumo', sans-serif;
+  font-size: 2em;
+}
+
+
+.container-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
 }
 
 
@@ -77,11 +106,11 @@ form.search {
   display: grid;
   grid-template-columns: auto 150px;
   margin-bottom: 100px;
-  margin-top: 40px;
+  margin-top: 90px;
   border-radius: 5px;
-  box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6)  ; 
-	-webkit-box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6)  ; 
-	-moz-box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6)  ; 
+  box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6); 
+	-webkit-box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6); 
+	-moz-box-shadow: 1px 6px 19px rgba(0, 0, 0, 0.6); 
 }
 /* 
 input:focus, textarea:focus, select:focus{
@@ -127,6 +156,22 @@ input:focus, textarea:focus, select:focus{
   border-radius: 5px;
 }
 
+.show .add {
+  visibility: hidden;
+}
+
+.show:hover .add {
+  visibility: visible;
+}
+
+.show .delete {
+  visibility: hidden;
+}
+
+.show:hover .delete {
+  visibility: visible;
+}
+
 
 
 .image-container {
@@ -155,7 +200,27 @@ button.delete {
   background-color: red;
 }
 
+.photo-container {
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+  background-color: #181818;
+  border-radius: 50%;
+}
 
+img.profile-photo {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #31363C;
+}
+
+.container-two h1 {
+  margin-bottom: 50px;
+  font-size: 1.5em;
+  font-family:'Agbalumo', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
+}
 
 
 
