--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
-<div class="container">
+<div class="container-two">
   <h2>Locations</h2>
 </div>
+
 <%- include('../partials/footer') %>
