--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -217,6 +217,23 @@ img.profile-photo {
   border: 2px solid #31363C;
 }
 
+.photo-container-two {
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  background-color: #181818;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  margin-left: 25px;
+}
+
+img.profile-photo-two {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+
 .container-two h1 {
   margin-bottom: 50px;
   font-size: 1.5em;
