--- a/views/buddies/index.ejs
+++ b/views/buddies/index.ejs
@@ -12,7 +12,7 @@
       <div class="image-container">
         <img name="showImage" class="show-image" src="<%= s.showImage %>" />
       </div>
-      <div name="showName"><%= s.showName %></div>
+      <div name="showName" class="flex-child"><%= s.showName %></div>
       <div name="showDate"><%= s.showDate.toLocaleDateString() %></div>
       <div name="showVenue"><%= s.showVenue %></div>
       <div name="showVenue"><%= s.showLocale %></div>
